--- a/.github/workflows/pipeline-mistralai.yml
+++ b/.github/workflows/pipeline-mistralai.yml
@@ -2,8 +2,8 @@ name: pipeline-mistralai
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: '30 2,14 * * *'
+  schedule:
+    - cron: "30 2,14 * * *"
 
 jobs:
   pipeline:
